--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gulp-minify-css": "^1.2.1",
     "gulp-stripbom": "^1.0.4",
     "gulp-wrap": "^0.11.0",
-    "nsdeclare": "^0.1.0"
+    "nsdeclare": "^0.1.0",
+    "handlebars": "^4.0.5"
   }
 }
